--- a/resources.html
+++ b/resources.html
@@ -159,43 +159,14 @@
     </div>
 
     <div class="search-container">
-        <input type="text" id="searchInput" placeholder="Search for resources...">
-        <button onclick="searchLinks()">Search</button>
+        <input type="text" id="searchInput" placeholder="Search for kids' books...">
+        <button onclick="searchBooks()">Search</button>
     </div>
 
-    <div class="book-links">
+    <div class="book-links" id="bookResults">
         <h2>Book Links</h2>
-
-        <!-- book link items -->
-        <div class="link-container">
-            <a href="https://www.nasa.gov/topics/solarsystem/index.html" target="_blank">NASA Solar System Exploration</a>
-        </div>
-        <div class="link-container">
-            <a href="https://www.worldwildlife.org/habitats" target="_blank">World Wildlife Fund - Habitats</a>
-        </div>
-        <div class="link-container">
-            <a href="https://www.history.com/topics/dinosaurs" target="_blank">History - Dinosaurs</a>
-        </div>
-        <div class="link-container">
-            <a href="https://kids.britannica.com/students/article/planets/627338" target="_blank">Britannica Kids - Planets</a>
-        </div>
-        <div class="link-container">
-            <a href="https://www.kids.nationalgeographic.com/animals/" target="_blank">National Geographic Kids - Animals</a>
-        </div>
-        <div class="link-container">
-            <a href="https://www.earthwonders.org/habitats/" target="_blank">Earth Wonders - Habitats</a>
-        </div>
-        <div class="link-container">
-            <a href="https://www.dkfindout.com/us/space/solar-system/" target="_blank">DK Find Out - Solar System</a>
-        </div>
-        <div class="link-container">
-            <a href="https://www.encyclopedia.com/science-and-technology/astronomy-and-space-exploration/astronomy-general/space-exploration" target="_blank">Encyclopedia.com - Space Exploration</a>
-        </div>
-        <div class="link-container">
-            <a href="https://www.timeforkids.com/animal-pdi/" target="_blank">TIME for Kids - Animal Database</a>
-        </div>
-        <div class="link-container">
-            <a href="https://www.ducksters.com/history/" target="_blank">Ducksters - History</a>
+        <div id="bookLinksContainer">
+            <!-- Book links will be dynamically added here -->
         </div>
         <div id="noResults" class="no-results">No results found.</div>
     </div>
@@ -205,27 +176,33 @@
     </div>
 
     <script>
-        function searchLinks() {
+        function searchBooks() {
             var input = document.getElementById('searchInput').value.toLowerCase();
-            var linkContainers = document.querySelectorAll('.link-container');
+            var bookLinksContainer = document.getElementById('bookLinksContainer');
             var noResults = document.getElementById('noResults');
-            var found = false;
+            var apiUrl = 'https://www.googleapis.com/books/v1/volumes?q=' + input + '+subject:children';
 
-            linkContainers.forEach(function(container) {
-                var linkText = container.textContent.toLowerCase();
-                if (linkText.includes(input)) {
-                    container.style.display = '';
-                    found = true;
-                } else {
-                    container.style.display = 'none';
-                }
-            });
-
-            if (found) {
-                noResults.style.display = 'none';
-            } else {
-                noResults.style.display = 'block';
-            }
+            fetch(apiUrl)
+                .then(response => response.json())
+                .then(data => {
+                    if (data.items && data.items.length > 0) {
+                        bookLinksContainer.innerHTML = ''; // Clear previous results
+                        data.items.forEach(item => {
+                            var bookInfo = item.volumeInfo;
+                            var link = document.createElement('div');
+                            link.classList.add('link-container');
+                            link.innerHTML = '<a href="' + bookInfo.previewLink + '" target="_blank">' + bookInfo.title + ' - ' + (bookInfo.authors ? bookInfo.authors.join(', ') : 'Unknown Author') + '</a>';
+                            bookLinksContainer.appendChild(link);
+                        });
+                        noResults.style.display = 'none';
+                    } else {
+                        bookLinksContainer.innerHTML = ''; // Clear previous results
+                        noResults.style.display = 'block';
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching books:', error);
+                });
         }
     </script>
 
