--- a/index1.html
+++ b/index1.html
@@ -108,11 +108,7 @@
             margin: 20px auto;
         }
         .footer {
-<<<<<<< Updated upstream
             background-color: #1CC2CD;
-=======
-            background-color: #360F3E;
->>>>>>> Stashed changes
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -158,30 +154,22 @@
             padding: 20px;
         }
         .flip-card-front {
-<<<<<<< Updated upstream
             background-color: #360F3E;
             border-radius: 4px;
         }
         .flip-card-back {
             background-color: #360F3E;
-=======
-            background-color: #1CC2CD;
             color: black;
         }
         .flip-card-back {
-            background-color: #1CC2CD;
->>>>>>> Stashed changes
+            background-color: #360F3E;
             color: white;
             transform: rotateY(180deg);
             border-radius: 4px;
         }
         .flip-card img {
             width: 150px;
-<<<<<<< Updated upstream
             height: 180px;
-=======
-            height: 150px;
->>>>>>> Stashed changes
             object-fit: cover;
             margin-bottom: 10px;
         }
@@ -264,7 +252,7 @@
                 </div>
                 <div class="flip-card-back">
                     <h3>Muhammad Najmi Zulhusni Bin Mohd Sapuan</h3>
-                    <p>Project Director</p>
+                    <p>Project Manager</p>
                 </div>
             </div>
         </div>
@@ -291,11 +279,7 @@
             </div>
         </div>
     </div>
-<<<<<<< Updated upstream
     <p>&copy; 2024 Kids e-Learning | SECVH | Universiti Teknologi Malaysia</p>
-=======
-    <p>&copy; 2024 Universiti Teknologi Malaysia</p>
->>>>>>> Stashed changes
 </div>
 
 <script>
